<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/mole4"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hole5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        app:srcCompat="@drawable/shadow"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/hole5"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/hole4"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="444dp"
        android:contentDescription="@string/mole5"
        app:layout_constraintEnd_toEndOf="@+id/hole5"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/hole4"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/hole3"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/hole4"
        app:layout_constraintBottom_toTopOf="@+id/hole4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <ImageButton
        android:id="@+id/hole2"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/hole2"
        app:layout_constraintBottom_toTopOf="@+id/hole3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toEndOf="@+id/hole_1"
        app:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="148dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hole3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/Lives"
        android:layout_width="62dp"
        android:layout_height="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lives_left"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hole_1"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/hole3"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/mole1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:layout_marginTop="156dp"
        android:contentDescription="@string/mole2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shadow"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="57dp"
        android:contentDescription="@string/mole3"
        android:rotation="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448"
        app:srcCompat="@drawable/shadow"
        tools:visibility="gone" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="157dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/HighScore"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>